2005-02-03  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-posts): Added support for
	extended descriptions.
	(delicious-api-get-recent): added support for extended descriptions.
	(delicious-api-get-all): added support for extended descriptions.
	(delicious-api-version): Updated version date.

2005-01-14  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-recent): Fixed bug, made count argument
	truly optional.
	Fixed parentheses problem. Oops.

	* README (w3m): Documented delicious-w3m-export.

	* delicious.el (delicious-w3m-export): Added rudimentary export of
	w3m bookmark sections.
	(delicious-w3m-read-section): Added function to do completing
	reads of w3m bookmark section names.
	(delicious-complete-tags): Added `nosuggest' argument so that
	completion can be done without suggesting any tags.

2005-01-10  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-html-uri): Fixed logic so that
	we're not sending "nil" as an argument to the server for any of
	the parameters anymore. This needs more cleaning up, and can be
	done much more efficiently.

	* README (delicious-w3m-bookmark-recent): Documented new function.

	* delicious.el (delicious-w3m-html): Made count require a number.
	(delicious-w3m-bookmark-recent): This is the beginning of w3m
	bookmark integration. Right now, it's dumb and doesn't even check
	for duplicates or attempt to do any kind of synching, but it does
	add bookmarks to your w3m bookmarks file.

	* delicioapi.el: Fixed let binding error. 

	* README (delicious-w3m-html): Documented prefix argument.

	* delicious.el (delicious-w3m-html): Added prefix argument. Using
	the prefix argument will browse the output in a new w3m session.

	* delicioapi.el (delicious-api-html-extended): Explained
	difference between `title' and `body' setting.

	* delicious.el: Updated copyright notice for the new year.

	* delicioapi.el: Updated copyright notice for the new year.
