@@ -1,3 +1,12 @@
+2005-02-04  John Sullivan  <john@wjsullivan.net>
+
+	* README (commands): Added description of new
+	(delicious-search-posts-regexp) command.
+
+	* delicious.el (delicious-version): Updated version date.
+	(delicious-search-posts-regexp): New function. Interactively
+	search your posts with a regular expression.
+
 2005-02-03  John Sullivan  <john@wjsullivan.net>
 
 	* delicioapi.el (delicious-api-get-posts): Added support for
